# logical_camera

./: CMakeLists.txt  README.md  package.xml
include/logical_camera/: logical_camera_plugin.hh
src/: logical_camera_plugin.cpp
urdf/: example.xacro
urdf/sensors/: sensor_logical_camera.xacro
